@@ -64,20 +64,8 @@ code with a lock/unlock pair.
 draw a circle on a surface</td></tr>
 
 
-<tr><td><a href=#circle>circle</a></td><td> -
-draw a circle on a surface</td></tr>
-
-
 <tr><td><a href=#ellipse>ellipse</a></td><td> -
 draw an ellipse on a surface</td></tr>
-
-
-<tr><td><a href=#ellipse>ellipse</a></td><td> -
-draw an ellipse on a surface</td></tr>
-
-
-<tr><td><a href=#line>line</a></td><td> -
-draw a line on a surface</td></tr>
 
 
 <tr><td><a href=#line>line</a></td><td> -
@@ -88,20 +76,8 @@ draw a line on a surface</td></tr>
 draw multiple connected lines on a surface</td></tr>
 
 
-<tr><td><a href=#lines>lines</a></td><td> -
-draw multiple connected lines on a surface</td></tr>
-
-
 <tr><td><a href=#polygon>polygon</a></td><td> -
 draws a polygon on a surface</td></tr>
-
-
-<tr><td><a href=#polygon>polygon</a></td><td> -
-draws a polygon on a surface</td></tr>
-
-
-<tr><td><a href=#rect>rect</a></td><td> -
-draws a rectangle on a surface</td></tr>
 
 
 <tr><td><a href=#rect>rect</a></td><td> -
@@ -111,20 +87,6 @@ draws a polygon on a surface</td></tr>
 </table>
 
 <hr>
-
-<a name=circle><font size=+2><b>circle
-</b></font><br><font size=+1><tt>
-pygame.draw.circle(Surface, color, pos, radius, width) -> Rect
-</tt></font><ul>
-Draws a circular shape on the Surface. The given position
-is the center of the circle, and radius is the size. The width
-argument is the thickness to draw the outer edge. If width is
-zero then the ellipse will be filled.
-<br>&nbsp;<br>
-The color argument can be either a RGB sequence or mapped color integer.
-<br>&nbsp;<br>
-This function will temporarily lock the surface.
-</ul><br>&nbsp;<br>
 
 <a name=circle><font size=+2><b>circle
 </b></font><br><font size=+1><tt>
@@ -154,33 +116,6 @@ The color argument can be either a RGB sequence or mapped color integer.
 This function will temporarily lock the surface.
 </ul><br>&nbsp;<br>
 
-<a name=ellipse><font size=+2><b>ellipse
-</b></font><br><font size=+1><tt>
-pygame.draw.ellipse(Surface, color, Rect, width) -> Rect
-</tt></font><ul>
-Draws an elliptical shape on the Surface. The given rectangle
-is the area that the circle will fill. The width argument is
-the thickness to draw the outer edge. If width is zero then
-the ellipse will be filled.
-<br>&nbsp;<br>
-The color argument can be either a RGB sequence or mapped color integer.
-<br>&nbsp;<br>
-This function will temporarily lock the surface.
-</ul><br>&nbsp;<br>
-
-<a name=line><font size=+2><b>line
-</b></font><br><font size=+1><tt>
-pygame.draw.line(Surface, color, startpos, endpos, width=1) -> Rect
-</tt></font><ul>
-Draws a line on a surface. This will respect the clipping
-rectangle. A bounding box of the effected area is returned
-as a rectangle.
-<br>&nbsp;<br>
-The color argument can be either a RGB sequence or mapped color integer.
-<br>&nbsp;<br>
-This function will temporarily lock the surface.
-</ul><br>&nbsp;<br>
-
 <a name=line><font size=+2><b>line
 </b></font><br><font size=+1><tt>
 pygame.draw.line(Surface, color, startpos, endpos, width=1) -> Rect
@@ -207,39 +142,6 @@ be joined seamlessly.
 <br>&nbsp;<br>
 This will respect the clipping rectangle. A bounding box of the
 effected area is returned as a rectangle.
-<br>&nbsp;<br>
-The color argument can be either a RGB sequence or mapped color integer.
-<br>&nbsp;<br>
-This function will temporarily lock the surface.
-</ul><br>&nbsp;<br>
-
-<a name=lines><font size=+2><b>lines
-</b></font><br><font size=+1><tt>
-pygame.draw.lines(Surface, color, closed, point_array, width=1) -> Rect
-</tt></font><ul>
-Draws a sequence on a surface. You must pass at least two points
-in the sequence of points. The closed argument is a simple boolean
-and if true, a line will be draw between the first and last points.
-Note that specifying a linewidth wider than 1 does not fill in the
-gaps between the lines. Therefore wide lines and sharp corners won't
-be joined seamlessly.
-<br>&nbsp;<br>
-This will respect the clipping rectangle. A bounding box of the
-effected area is returned as a rectangle.
-<br>&nbsp;<br>
-The color argument can be either a RGB sequence or mapped color integer.
-<br>&nbsp;<br>
-This function will temporarily lock the surface.
-</ul><br>&nbsp;<br>
-
-<a name=polygon><font size=+2><b>polygon
-</b></font><br><font size=+1><tt>
-pygame.draw.polygon(Surface, color, pointslist, width) -> Rect
-</tt></font><ul>
-Draws a polygonal shape on the Surface. The given pointlist
-is the vertices of the polygon. The width argument is
-the thickness to draw the outer edge. If width is zero then
-the polygonal shape will be filled.
 <br>&nbsp;<br>
 The color argument can be either a RGB sequence or mapped color integer.
 <br>&nbsp;<br>
@@ -258,24 +160,6 @@ the polygon will be filled.
 The color argument can be either a RGB sequence or mapped color integer.
 <br>&nbsp;<br>
 This function will temporarily lock the surface.
-</ul><br>&nbsp;<br>
-
-<a name=rect><font size=+2><b>rect
-</b></font><br><font size=+1><tt>
-pygame.draw.rect(Surface, color, Rect, width) -> Rect
-</tt></font><ul>
-Draws a rectangular shape on the Surface. The given Rect
-is the area of the rectangle. The width argument is
-the thickness to draw the outer edge. If width is zero then
-the rectangle will be filled.
-<br>&nbsp;<br>
-The color argument can be either a RGB sequence or mapped color integer.
-<br>&nbsp;<br>
-This function will temporarily lock the surface.
-<br>&nbsp;<br>
-Keep in mind the <a href=Surface.html#fill>Surface.fill()</a> method works just as well
-for drawing filled rectangles. In fact the <a href=Surface.html#fill>Surface.fill()</a>
-can be hardware accelerated when the moons are in alignement.
 </ul><br>&nbsp;<br>
 
 <a name=rect><font size=+2><b>rect
